objects/TriggerManager__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>enablePerformanceTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable performance triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>runMDMTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>runMDMTriggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>runMembershipTriggers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>runMembershipTriggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>runTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>runTriggers</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerManager</label>
</CustomObject>